# prospect_presentation

./: README.md  download_model.py  pyproject.toml
src/: orchestrator.py
src/agents/: evaluator_agent.py  intenthq_indexer_agent.py  intenthq_retriever_agent.py  ppt_writer_agent.py  prospect_scraper_agent.py  rag_composer_agent.py
src/api/: presentation_api.py
src/cli/: run_orchestrator.py
src/tools/: embedding_tool.py  eval_tool.py  intenthq_index_utils.py  ppt_tool.py  scraper_tool.py
src/ui/: demo_ui.py
src/utils/: chroma_setup.py  config.py  llm_setup.py  logging_config.py  logo_fetcher.py  prompts.py  scraper.py
